fix responsive problem on mobile and tablets

--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,34 @@
-
-*{
+* {
   box-sizing: border-box;
 }
 
 /* for root */
-:root{
+:root {
 
-  --robot:'Roboto Mono', monospace;
+  --robot: 'Roboto Mono', monospace;
   --robotCondensed: 'Roboto Condensed', sans-serif;
   --neonblack: black;
 
 }
 
 /* scroll snap */
-html{
+html {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
-  scroll-padding-top: 200px;
+  /* scroll-padding-top: 200px; */
 }
 
-section{
-  height: 100vh;
+section {
+  height: 100lvh;
   scroll-snap-align: start;
-  
-  
+  padding: 10lvh 0 0 0;
+
+}
+
+section:not(.hero-section) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #scrollToTopBtn {
@@ -36,74 +41,82 @@ section{
 }
 
 /* body */
-body{
+body {
   font-family: var(--robotCondensed) !important;
   background-color: var(--neonblack) !important;
 
 }
 
+a {
+  cursor: pointer;
+}
+
 /* header style */
-header{
+header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  padding: 1lvh 2lvw 1lvh 2lvw;
   z-index: 100;
 }
 
-.navbar .navbar-brand{
+.navbar .navbar-brand {
   /* color: #5918df; */
   color: whitesmoke;
   font-size: 2rem;
   font-weight: bold;
 }
 
-.navbar .nav-link{
-  color: hsla(0,0%,100%,.5);
+.navbar .nav-link {
+  color: hsla(0, 0%, 100%, .5);
   font-size: 1.2rem;
   font-weight: bold;
   font-family: var(--robotCondensed) !important;
 }
-.navbar .nav-link:hover{
+
+.navbar .nav-link:hover {
   color: whitesmoke;
 }
 
-.navbar-toggler{
+.navbar-toggler {
   color: white;
   border: none;
   outline: none;
   font-size: 25px;
 }
 
-.navbar-toggler:active, .navbar-toggler:focus{
+.navbar-toggler:active,
+.navbar-toggler:focus {
   outline: none;
   border: none;
   box-shadow: none;
 
 }
 
-@media (max-width: 991px){
-  .navbar .navbar-nav{
-    background-color:  rgb(94, 94, 194);
+@media (max-width: 991px) {
+  .navbar .navbar-nav {
+    background-color: rgb(94, 94, 194);
     border-radius: 5px;
   }
-  .navbar .nav-link{
+
+  .navbar .nav-link {
     padding-left: 2rem;
   }
 }
 
-#divName{
+#divName {
   display: flex;
   align-items: center;
-  
+
 }
 
-#divName a:hover{
+#divName a:hover {
   color: #5918df;
   transition: .5s ease;
 }
 
-#divName img{
+#divName img {
   width: 50px;
   height: 50px;
 }
@@ -114,12 +127,12 @@ img[src="img/iconwolf.png"] {
 
 /* hero section style */
 
-.hero-section{
+.hero-section {
   position: relative;
   /* z-index: 2; */
 }
 
-#divSocial a{
+#divSocial a {
   background: transparent;
   border: 2px solid #5918df;
   border-radius: 50%;
@@ -127,18 +140,18 @@ img[src="img/iconwolf.png"] {
   transition: .5s ease;
 }
 
-#divSocial a:hover{
+#divSocial a:hover {
   background: #5918df;
   color: white;
-  
+
 }
 
-#aDownload{
+#aDownload {
   text-decoration: none;
   color: white;
 }
 
-.btn-dark{
+.btn-dark {
   width: 200px;
   height: 50px;
   outline: none;
@@ -147,10 +160,10 @@ img[src="img/iconwolf.png"] {
   background-color: transparent;
   color: white;
   transition: .5s ease;
-  
+
 }
 
-.btn-dark:hover{
+.btn-dark:hover {
   background-color: #7f48ed;
   color: white;
 }
@@ -171,7 +184,7 @@ img[src="img/iconwolf.png"] {
 } */
 
 /* card hover tile animation */
-.workExperience .card{
+.workExperience .card {
   max-width: 100%;
   width: 300px;
   height: 340px;
@@ -180,11 +193,11 @@ img[src="img/iconwolf.png"] {
   border: 5px solid white;
 }
 
-.workExperience .card:hover .card-body{
+.workExperience .card:hover .card-body {
   right: 0;
 }
 
-.workExperience .card-body{
+.workExperience .card-body {
   width: 100%;
   height: 100%;
   top: 0;
@@ -200,7 +213,31 @@ img[src="img/iconwolf.png"] {
   transition: 2s;
 }
 
-.uniProject .card{
+/* For tablets and phones */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+
+  .about {
+    height: 120vh;
+  }
+
+}
+
+@media (orientation: portrait) {
+  .uniProject {
+    height: 200vh;
+  }
+
+  .about {
+    height: 120vh;
+  }
+
+  .workExperience {
+    height: 130lvh;
+  }
+}
+
+
+.uniProject .card {
   max-width: 100%;
   width: 300px;
   height: 340px;
@@ -209,18 +246,18 @@ img[src="img/iconwolf.png"] {
   border: 5px solid white;
 }
 
-.uniProject .card:hover .card-body{
+.uniProject .card:hover .card-body {
   right: 0;
 }
 
-.card-img{
+.card-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
+
 }
 
-.card-body{
+.card-body {
   width: 100%;
   height: 100%;
   top: 0;
@@ -236,26 +273,26 @@ img[src="img/iconwolf.png"] {
   transition: 2s;
 }
 
-.card-title{
+.card-title {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
 }
 
-.card-subtitle{
+.card-subtitle {
   text-transform: capitalize;
   font-size: 30px;
   font-weight: 500;
 }
 
-.card-info{
+.card-info {
   font-size: 20px;
   line-height: 25px;
   margin: 10px 0 10px 0;
   font-weight: 500;
 }
 
-.card-btn{
+.card-btn {
   color: #5918df;
   background: whitesmoke;
   border-radius: 5px;
@@ -268,36 +305,41 @@ img[src="img/iconwolf.png"] {
   width: 150px;
 }
 
-.card-btn a{
+.card-btn a {
   text-decoration: none;
   color: #5918df;
   padding: 10px 20px 10px 20px;
 }
 
-.card-btn a:hover{
+.card-btn a:hover {
   color: white;
 }
 
-.card-btn:hover{
+.card-btn:hover {
   background-color: #5918df;
   color: white;
 }
 
 /* contact style */
-.contact form{
+/* .contact {
+  padding: 0 0 10lvh 0;
+} */
+
+.contact form {
   max-width: 70rem;
   margin: 1rem auto;
   text-align: center;
   margin-bottom: 3rem;
 }
 
-.contact form .input-box{
+.contact form .input-box {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.contact form .input-box input, .contact form textarea{
+.contact form .input-box input,
+.contact form textarea {
   width: 100%;
   padding: 1.5rem;
   font-size: 1.6rem;
@@ -306,21 +348,20 @@ img[src="img/iconwolf.png"] {
   margin: .7rem 0;
 }
 
-.contact form .input-box input{
+.contact form .input-box input {
   width: 49%;
 }
 
-.contact form textarea{
+.contact form textarea {
   resize: none;
 }
 
 /* footer style */
-.footer{
-
+.footer {
   color: white;
   text-align: center;
 }
 
-.footer-text{
+.footer-text {
   font-size: 1.6rem;
 }
